<resources>
    <string name="app_name">Style Transfer App</string>

    // default text content
    <string name="gallery_img_name_default">No Title</string>
    <string name="gallery_img_date_default">08.11.02</string>
    <string name="gallery_img_description_default">Your result of style transfer</string>

    <string name="bottom_navigation_gallery_item_name">Gallery</string>
    <string name="bottom_navigation_account_item_name">Account</string>
    <string name="title_activity_auth">AuthActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome!</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login failed</string>
    <string name="login_success">Successfully logged in</string>
    <string name="register_success">Successfully registered</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
</resources>