<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/gallery_img"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:contentDescription="@string/gallery_img_description_default"/>

        <TextView
            android:id="@+id/gallery_img_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/gallery_img_name_default"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/gallery_img_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingEnd="1dp"
            android:text="@string/gallery_img_date_default"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/gallery_img_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gallery_img_description_default"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="20sp"
            android:paddingTop="10dp"
            android:paddingStart="8dp"
            android:paddingEnd="5dp"/>
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>